# haRness

./: CMakeLists.txt  CMakeLists.txt.old  NOTES.md  README.md  proto_compile.sh
cmake/: FindR.cmake
src/: envs.cpp  envs.h  main.cpp  operation_store.cpp  operation_store.h  r_eval.cpp  r_eval.h  r_eval_service_impl.cpp  r_eval_service_impl.h  r_init.cpp  r_init.h  r_result.cpp  r_result.h  r_task.cpp  r_task.h  r_worker.cpp  r_worker.h
src/cpp_generated/: reval_service.grpc.pb.cc  reval_service.grpc.pb.h  reval_service.pb.cc  reval_service.pb.h
src/proto/: reval_service.proto
